<resources>
    <string name="app_name">Working hours counter</string>
    <string name="start">Set beginning of work</string>
    <string name="end">Set end of work</string>
    <string name="save">Save</string>
    <string name="rate_per">Rate per hour of work</string>
    <string name="total_earned_money">Earned: %1$.2f</string>
    <string name="holder_start_time">Start time %1$02d : %2$02d</string>
    <string name="holder_end_time">End time %1$02d : %2$02d</string>
    <string name="holder_total_hours">Work time: %1$02dh:%2$02dm</string>
    <string name="holder_total_earning">Earned: %1$.2f</string>
    <string name="total_time">Total time: %1$02dh%2$02dm</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
</resources>